# imgui-sharp-native

./: .gitignore  CMakeLists.txt  Directory.Build.props  README.md  TODO.md
.github/workflows/: build.yml  release.yml
nuget/ImguiSharp.Redist/: .gitignore  ImguiSharp.Redist.csproj
scripts/: fetch-sdl3.ps1  fetch-sdl3.sh  sdl3-versions.json
src/: imgui_sharp.cpp  imgui_sharp.h  imgui_sharp_backend.cpp
